--- a/dotnetCore(mvcModels)_ShoppingList/dotnetCore(mvcModels)_ShoppingList.csproj
+++ b/dotnetCore(mvcModels)_ShoppingList/dotnetCore(mvcModels)_ShoppingList.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
